--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -32,16 +32,16 @@
 
     <ol>
       <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <img class="image" src="../media/travis-1.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-1.jpg"/>
       <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/travis-2.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-2.jpg"/>
       <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/travis-3.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-3.jpg"/>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/How to Travis.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls src="../media/gitlab/View Pipelines.mp4" type="video/mp4">Your browser does not support video files</video>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
