--- a/guides/webide.html
+++ b/guides/webide.html
@@ -26,6 +26,16 @@
     </pre>
 
     <p id="description">Brief Description</p>
+
+    <ol>
+      <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
+      <img class="image" src="../media/gitlab/guide/webide-1.png"/>
+      <li>Click on the link for <i>the build</i> like shown in the picture below</li>
+      <img class="image" src="../media/gitlab/guide/webide-2.jpg"/>
+      <li>You can now view the logs as shown in the picture below</li>
+      <img class="image" src="../media/gitlab/guide/webide-3.jpg"/>
+      <img class="image" src="../media/gitlab/guide/webide-4.jpg"/>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
