--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -32,18 +32,18 @@
     <ol>
       <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
       <li>Copy the URL by clicking on the button on the right of the URL</li>
-      <img class="image" src="../media/clone-1.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-1.jpg"/>
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
-      <img class="image" src="../media/clone-2.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-2.jpg"/>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
       <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i></li>
-      <img class="image" src="../media/clone-3.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-3.jpg"/>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/Git Clone Repository.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls src="../media/gitlab/Clone Repo.mp4" type="video/mp4">Your browser does not support video files</video>
 
     <h2>Console Commands Used</h2>
     <pre class="prettyprint">git clone "URL to git repository" # Clones the repository</pre>
