Pictures are in PNG format not JPG
Whoops

--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -32,12 +32,12 @@
     <ol>
       <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
       <li>Copy the URL by clicking on the button on the right of the URL</li>
-      <img class="image" src="../media/gitlab/guide/clone-1.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-1.png"/>
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
-      <img class="image" src="../media/gitlab/guide/clone-2.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-2.png"/>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
       <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i></li>
-      <img class="image" src="../media/gitlab/guide/clone-3.jpg"/>
+      <img class="image" src="../media/gitlab/guide/clone-3.png"/>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
     
