--- a/guides/webide.html
+++ b/guides/webide.html
@@ -31,10 +31,10 @@
       <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
       <img class="image" src="../media/gitlab/guide/webide-1.png"/>
       <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/webide-2.jpg"/>
+      <img class="image" src="../media/gitlab/guide/webide-2.png"/>
       <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/webide-3.jpg"/>
-      <img class="image" src="../media/gitlab/guide/webide-4.jpg"/>
+      <img class="image" src="../media/gitlab/guide/webide-3.png"/>
+      <img class="image" src="../media/gitlab/guide/webide-4.png"/>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
