--- a/guides/mr.html
+++ b/guides/mr.html
@@ -39,24 +39,24 @@
         <li>Click the <i>Branch</i> button to create a new branch</li>
         <li>Enter your desired branch name <i>(To sort the branch to folders, append / to the branch name)</i></li>
         <li>Click <i>Create Branch</i> to confirm branch creation</li>
-        <img class="image" src="../media/gitlab/guide/mr-1.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-1.png"/>
         <li>Do your necessary code implementation/fixes/changes<br>
         (See <a href="pull.html">Pull from GitHub</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to GitHub</a>)</li>
         <li>When it is all done, head over to the repo page</li>
         <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i></li>
-        <img class="image" src="../media/gitlab/guide/mr-2.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-2.png"/>
         <li><i>Note: If it does not show up, manually create the PR by going to the Pull Request tab and select "Create Pull Request", after which select your branch in the compare dropdown box</i></li>
         <li>Enter your Pull Request Title and Descriptions accordingly if needed. Also modify the settings on the left if you need to do so</li>
         <li>When you are done, create the PR by clicking the green <i>Create Pull Request</i> button</li>
-        <img class="image" src="../media/gitlab/guide/mr-3.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-3.png"/>
         <li>Now we play the waiting game until a green tick appears and it says <i>All checks have passed</i> (Note: If it fails, your code is not compiling and needs to be fixed)</li>
         <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge Pull Request</i> button</li>
-        <img class="image" src="../media/gitlab/guide/mr-4.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-4.png"/>
         <li>Continue clicking <i>Confirm merge</i> here</li>
-        <img class="image" src="../media/gitlab/guide/mr-5.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-5.png"/>
         <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)</li>
-        <img class="image" src="../media/gitlab/guide/mr-6.jpg"/>
-        <img class="image" src="../media/gitlab/guide/mr-7.jpg"/>
+        <img class="image" src="../media/gitlab/guide/mr-6.png"/>
+        <img class="image" src="../media/gitlab/guide/mr-7.png"/>
       </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
