--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -32,11 +32,11 @@
 
     <ol>
       <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <img class="image" src="../media/gitlab/guide/pipeline-1.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-1.png"/>
       <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/pipeline-2.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-2.png"/>
       <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/pipeline-3.jpg"/>
+      <img class="image" src="../media/gitlab/guide/pipeline-3.png"/>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
