--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <li><a href="/guides/import-eclipse.html">Eclipse</a></li>
       </ul></li>
       <li><a href="/guides/commit.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to commit a file</a></li>
-      <li><a href="/guides/pull.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to update local repo with new code from GitHub/GitLab (pull)</a></li>
-      <li><a href="/guides/push.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to push to GitHub/GitLab</a></li>
+      <li><a href="/guides/pull.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to update local repo with new code from origin (pull)</a></li>
+      <li><a href="/guides/push.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to push to origin</a></li>
       <li><b>Important</b> How to create a feature (PR/MR)<ul>
         <li><a href="/guides/pr.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub Pull Requests</a></li>
         <li><a href="/guides/mr.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab Merge Requests (Coming Soon)</a></li>
@@ -70,6 +70,8 @@
     <p>YES! However, this guide is catered to SourceTree <i class="fab fa-sourcetree"></i> but other <i class="fab fa-git"></i> GUI programs will have their own equivalent features. You just have to hunt for them. Or you can always use <i class="fab fa-git"></i> console	&#128527;</p>
     <h2>I'm actually interested in the Console Command equivalents of the various tools! How do I find them?</h2>
     <p>Scroll all the way down to the bottom of each page and I will add the console command equivalent there if available</p>
+    <h2>Why do I see terms such as "origin" or "upstream"?</h2>
+    <p>These terms refers to various <i class="fab fa-git"></i> repositories that is registered. <i>origin</i> refers to your own repository where you are currently editing your codebase in. <i>upstream</i> refers to the parent repository for a forked repository. A forked repository is the term used for repositories that have been cloned to your own profile</p>
     <h2>Why do we need to work in branches and do a PR? Can't we just commit directly to Master?</h2>
     <p>The main reason for working in seperate branches is to allow us to be able to work on the codebase simultaneously without much conflicts (hopefully). It is also done to ensure that
       the master branch will always be compilable and bad code does not land there. This is why branch protection exists as well to prevent direct pushes 
