Update breadcrumbs to fix webhint error for labelling

--- a/guides/github.html
+++ b/guides/github.html
@@ -16,7 +16,7 @@
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
-        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <select aria-label="Breadcrumb" name="breadcrumb-jump" id="breadcrumb-select"></select>
         <button type="button"><a class="button" id="nxtbtn" href="../index.html">Next</a></button>
       </div>
     </div>
