--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -17,7 +17,7 @@
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
         <button type="button"><a class="button" id="prebtn" href="../index.html">Previous</a></button>
-        <select name="breadcrumb-jump" id="breadcrumb-select"></select>
+        <select aria-label="Breadcrumb" name="breadcrumb-jump" id="breadcrumb-select"></select>
         <button type="button"><a class="button" id="nxtbtn" href="../index.html">Next</a></button>
       </div>
     </div>
