--- a/guides/github.html
+++ b/guides/github.html
@@ -148,7 +148,7 @@
       <li>Issue Cards</li>
     </ol>
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
     <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
