--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -188,7 +188,7 @@
     </ol>
     <br>
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
     <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
