--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -43,7 +43,7 @@
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/gitlab/View Pipelines.mp4" type="video/mp4">Your browser does not support video files</video>
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
     <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
