--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -55,7 +55,7 @@
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
     <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
