--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -58,7 +58,7 @@
       <li>Stashes found on your local machine (you can right click to apply stash to reapply the changes you made back to the repository)</li>
     </ol>
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
     <script src="../scripts/breadcrumb.js" type="text/javascript"></script>
   </body>
