Updated GitLab Introduction Page
We have also fixed some errors in the Intro to GitHub page as well

--- a/guides/github.html
+++ b/guides/github.html
@@ -101,7 +101,7 @@
       </ul></li>
     </ol>
     
-    <h2><a id="jump-pr"></a>Pull Requests Screen</h2>
+    <h2><a id="jump-pr"></a>Pull Requests (PR) Screen</h2>
     <img class="image" src="../media/ghst/pr-1.png" />
     <ol>
       <li>Button to create a new pull request</li>
@@ -120,7 +120,7 @@
         <li>Files changed - Diff of files that are changed in this Pull Request</li>
       </ul></li>
       <li>Comment and changes made to the issue</li>
-      <li>Issue Properties (top to bottom): <ul>
+      <li>PR Properties (top to bottom): <ul>
         <li>Reviewers - Who is involved in reviewing the PR</li>
         <li>Assignee - Who is assigned to the PR</li>
         <li>Labels - Labels assigned to the PR (bug, enhancement etc)</li>
@@ -130,7 +130,7 @@
         <li>Lock Conversation - Restrict comments to collaborators only</li>
       </ul></li>
       <li>Checks being done to this PR as well as the button to merge the PR</li>
-      <li>Box where you can enter comments to the PR as well as close it (if you are the issue creator)</li>
+      <li>Box where you can enter comments to the PR as well as close it (if you are the PR creator)</li>
     </ol>
 
     <h2><a id="jump-project"></a>Project Screen (It's like Trello/JIRA)</h2>
