--- a/guides/commit.html
+++ b/guides/commit.html
@@ -47,7 +47,7 @@
       git add [-A] "file name" # Add files to commit (-A if you wish to add all files)
       git status # View Tracked Files
       git commit -m "'Commit Message'" # Commits the file with a commit message</pre>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js" integrity="sha384-kzCVIKjPGX5Z3kl3N77p1HfqOB9a1qXhDxX5FhD9AEDuQKEShJBzrR0o3iKAMUWR" crossorigin="anonymous"></script>
 
     <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
