--- a/guides/pull.html
+++ b/guides/pull.html
@@ -47,7 +47,7 @@
       git fetch origin # Fetch changes from GitHub
       git pull # Pulls changes from GitHub
     </pre>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js" integrity="sha384-kzCVIKjPGX5Z3kl3N77p1HfqOB9a1qXhDxX5FhD9AEDuQKEShJBzrR0o3iKAMUWR" crossorigin="anonymous"></script>
 
     <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
