Finished up all of GitLab's exclusive guides

--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>GitLab Clone Repository (git clone) (WIP)</h1>
+    <h1><i class="fab fa-gitlab"></i> GitLab Clone Repository (git clone)</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -26,17 +26,18 @@
       <a href="clone.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
-    <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
+    <p id="description">The following steps teaches you how to clone a GitLab <i class="fab fa-gitlab"></i> Repository onto your local machine</p>
 
     <ol>
-      <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
-      <li>Copy the URL by clicking on the button on the right of the URL</li>
-      <img class="image" src="../media/gitlab/guide/clone-1.png"/>
-      <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
-      <img class="image" src="../media/gitlab/guide/clone-2.png"/>
+      <li>Go to the GitLab <i class="fab fa-gitlab"></i> Repository and click on <i>Clone</i></li>
+      <li>Copy the <b>HTTPS</b> Clone URL by clicking on the copy button on the right of the URL<br>
+        <img alt="GitLab Clone #1" class="image" src="../media/gitlab/guide/clone-1.png"/>
+      </li>
+      <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i><br>
+        <img alt="GitLab Clone #2" class="image" src="../media/gitlab/guide/clone-2.png"/></li>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
-      <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i></li>
-      <img class="image" src="../media/gitlab/guide/clone-3.png"/>
+      <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i><br>
+        <img alt="GitLab Clone #3" class="image" src="../media/gitlab/guide/clone-3.png"/></li>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
     
