--- a/guides/clone.html
+++ b/guides/clone.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Clone Repository (git clone)</h1>
+    <h1><i class="fab fa-github"></i> GitHub Clone Repository (git clone)</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
