--- a/guides/pr.html
+++ b/guides/pr.html
@@ -31,7 +31,7 @@
       extra validation on our code through code review by Continuous Integration (CI) servers or other collaborators. This will ensure that bad code will never be found on master
     </p>
     <b>Note: Basically most of the features should follow this flow 
-      (everything on a Pull Request). This way it will allow us to do our own 
+      (everything on a branch and changes back to master through a Pull Request). This way it will allow us to do our own 
       stuff simultaneously effectively</b>
 
       <ol>
@@ -40,7 +40,7 @@
         <li>Click <i>Create Branch</i> to confirm branch creation</li>
         <img class="image" src="../media/pr-1.jpg"/>
         <li>Do your necessary code implementation/fixes/changes<br>
-        (See <a href="pull.html">Pull from GitHub</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to GitHub</a>)</li>
+        (See <a href="pull.html">Pull from origin</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to origin</a>)</li>
         <li>When it is all done, head over to the repo page</li>
         <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i></li>
         <img class="image" src="../media/pr-2.jpg"/>
