--- a/guides/conflict-web.html
+++ b/guides/conflict-web.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Resolve Conflicts in Code on the Web during a MR (WIP)</h1>
+    <h1>Resolve Conflicts in Code on the Web during a <i class="fab fa-gitlab"></i> GitLab MR</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -25,37 +25,35 @@
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
     </pre>
 
-    <p id="description">The following guide shows you how to resolve conflicts if it happens (either through rebasing or pulling code). Console usage is required</p>
+    <p id="description">The following guide shows you how to resolve conflicts directly from the Merge Request if found</p>
 
     <ol>
-      <li>If a merge conflict occurs (either through pull or rebase or whatever), an error will pop up somewhere along the lines shown in this console window</li>
-      <img class="image" src="../media/gitlab/guide/conflict-1.png"/>
-      <li>When then happen, check the files that have conflicted (you can see it in the console or in the File Status tab on SourceTree where they will display them as ! files)</li>
-      <li>Use your IDE to head over to that file (or open in any text editor)</li>
-      <li>Identify the conflicted code and resolve them normally</li>
-      <span><b>Before Conflict Resolution</b><br>
-      <img class="image" src="../media/gitlab/guide/conflict-2.png"/><br></span>
-      <span><b>After Conflict Resolution</b><br>
-      <img class="image" src="../media/gitlab/guide/conflict-3.png"/><br></span>
-      <li>Head back to SourceTree and select the resolved conflicted files in <i>Unstaged Files</i> and stage them accordingly</li>
-      <img class="image" src="../media/gitlab/guide/conflict-4.png"/>
-      <li>Tell git to continue the operation you are doing<br>
-      If you are doing a pull, just go ahead and click <i>Commit</i> in File Status (see <a href="commit.html">Commit Code</a>)<br>
-      If you are doing a rebase, go back to the console and execute <pre class="prettyprint">git rebase --continue</pre> (See pic below)</li>
-      <img class="image" src="../media/gitlab/guide/conflict-5.png"/>
+      <li>Click the "Resolve Conflicts" button if it appears during a MR<br>
+        <img alt="Conflict Resolution Merge Request #1" class="image" src="../media/gitlab/guide/conflict-1.png"/>
+      </li>
+      <li>GitLab <i class="fab fa-gitlab"></i> will show you the files that are currently conflicting. From there you have 2 modes you can use: <ul>
+        <li><span><b>Interactive Mode</b></span><br>
+        This mode will allow you look at the conflict and select either one of them to use as conflict resolution
+          <br><img alt="Conflict Resolution Merge Request Interactive Mode" class="image" src="../media/gitlab/guide/conflict-2.png"/>
+        </li>
+        <li><span><b>Manual Inline Mode</b></span><br>
+          This mode will allow you to manually modify and resolve the conflict directly from the page itself<br>
+          <b>Note: In this mode, you need to remove the 3 lines (&lt;&lt;&lt;, &gt;&gt;&gt; and ===) or errors may occur</b>
+            <br><img alt="Conflict Resolution Merge Request Manual Inline Mode" class="image" src="../media/gitlab/guide/conflict-3.png"/>
+          </li>
+      </ul></li>
+      <li>After resolving the conflict using either of the modes, enter your Commit Message for the conflict resolution and click "Commit"<br>
+        <img alt="Conflict Resolution Merge Request #2" class="image" src="../media/gitlab/guide/conflict-4.png"/>
+      </li>
+      <li>Ensure that your conflict has been resolved (Button shows "Merge" or "Merge when pipeline succeeds")<br>
+        <img alt="Conflict Resolution Merge Request #3" class="image" src="../media/gitlab/guide/conflict-5.png"/>
+      </li>
     </ol>
     
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/gitlab/Resolve Conflict MR Web.mp4" type="video/mp4">Your browser does not support video files</video>
-
-    <h2>Console Commands Used</h2>
-    <pre class="prettyprint">
-      git rebase "branch" # Rebase the branch
-      git rebase --continue # Continues after resolving conflict
-    </pre>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js" integrity="sha384-kzCVIKjPGX5Z3kl3N77p1HfqOB9a1qXhDxX5FhD9AEDuQKEShJBzrR0o3iKAMUWR" crossorigin="anonymous"></script>
 
     <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
