--- a/guides/mr.html
+++ b/guides/mr.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Issue Merge Request (MR) for features (WIP)</h1>
+    <h1>Issue Merge Request (MR) for features</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -26,36 +26,44 @@
       <a href="pr.html">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
-    <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
-      of branches where we will do our code/feature/implementation/whatever and then we will issue a Pull Request (PR) to commit said code back to master. This way we are able to do
+    <p id="description">This will show you how to do git-flow style of committing. Ideal <i class="fab fa-git"></i> guidelines is that we never commit anything to master directly. So instead, we make use
+      of branches where we will do our code/feature/implementation/whatever and then we will issue a Merge Request (MR) to commit said code back to master. This way we are able to do
       extra validation on our code through code review by Continuous Integration (CI) servers or other collaborators. This will ensure that bad code will never be found on master
     </p>
     <b>Note: Basically most of the features should follow this flow 
-      (everything on a Pull Request). This way it will allow us to do our own 
-      stuff simultaneously effectively</b>
+      (everything on a branch and changes back to master through a Merge Request). This way it will allow us to do our own 
+      issues simultaneously effectively</b>
 
       <ol>
         <li>Click the <i>Branch</i> button to create a new branch</li>
         <li>Enter your desired branch name <i>(To sort the branch to folders, append / to the branch name)</i></li>
-        <li>Click <i>Create Branch</i> to confirm branch creation</li>
-        <img class="image" src="../media/gitlab/guide/mr-1.png"/>
+        <li>Click <i>Create Branch</i> to confirm branch creation<br>
+          <img alt="GitLab MR #1" class="image" src="../media/gitlab/guide/mr-1.png"/>
+        </li>
         <li>Do your necessary code implementation/fixes/changes<br>
-        (See <a href="pull.html">Pull from GitHub</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to GitHub</a>)</li>
-        <li>When it is all done, head over to the repo page</li>
-        <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i></li>
-        <img class="image" src="../media/gitlab/guide/mr-2.png"/>
-        <li><i>Note: If it does not show up, manually create the PR by going to the Pull Request tab and select "Create Pull Request", after which select your branch in the compare dropdown box</i></li>
-        <li>Enter your Pull Request Title and Descriptions accordingly if needed. Also modify the settings on the left if you need to do so</li>
-        <li>When you are done, create the PR by clicking the green <i>Create Pull Request</i> button</li>
-        <img class="image" src="../media/gitlab/guide/mr-3.png"/>
+        (See <a href="pull.html">Pull from origin</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to origin</a>)</li>
+        <li>When it is all done, head over to the repo project page</li>
+        <li>You should be able to see your branch name that you just pushed at the top of the page, and select <i>Create merge request</i><br>
+          <img alt="GitLab MR #2" class="image" src="../media/gitlab/guide/mr-2.png"/>
+        </li>
+        <li><i>Note: If it does not show up, manually create the MR by going to the Merge Requests page and select "New merge request", after which select your branch in the "Select source branch" dropdown box</i></li>
+        <li>Enter your Merge Request Title and Descriptions accordingly if needed. Also modify the settings at the bottom if you need to do so<br>
+          <img alt="GitLab MR #3" class="image" src="../media/gitlab/guide/mr-3.png"/>
+        </li>
+        <li>Double check that the branch you are merging to is correct and review your changes again</li>
+        <li>When you are done, create the MR by clicking the green <i>Submit merge request</i> button<br>
+          <img alt="GitLab MR #4" class="image" src="../media/gitlab/guide/mr-4.png"/>
+        </li>
         <li>Now we play the waiting game until a green tick appears and it says <i>All checks have passed</i> (Note: If it fails, your code is not compiling and needs to be fixed)</li>
-        <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge Pull Request</i> button</li>
-        <img class="image" src="../media/gitlab/guide/mr-4.png"/>
-        <li>Continue clicking <i>Confirm merge</i> here</li>
-        <img class="image" src="../media/gitlab/guide/mr-5.png"/>
-        <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)</li>
-        <img class="image" src="../media/gitlab/guide/mr-6.png"/>
-        <img class="image" src="../media/gitlab/guide/mr-7.png"/>
+        <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge</i> button<br>
+          <img alt="GitLab MR #5" class="image" src="../media/gitlab/guide/mr-5.png"/>
+        </li>
+        <li>Ensure that it says your merge request has been merged<br>
+          <img alt="GitLab MR #6" class="image" src="../media/gitlab/guide/mr-6.png"/>
+        </li>
+        <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)<br>
+          <img alt="GitLab MR #7" class="image" src="../media/gitlab/guide/mr-7.png"/>
+        </li>
       </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
