--- a/guides/webide.html
+++ b/guides/webide.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Web IDE (WIP)</h1>
+    <h1><i class="fab fa-gitlab"></i> GitLab Web IDE</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -24,21 +24,37 @@
       This file only relates to <i class="fab fa-gitlab"></i> GitLab.
     </pre>
 
-    <p id="description">Brief Description</p>
+    <p id="description">There are some occasions where you urgently needs to modify multiple documents, however you are not anywhere near a proper IDE. Don't worry as GitLab 
+      <i class="fab fa-gitlab"></i> has you covered by implementing a web-based IDE directly into their website. This guide will show you the general flow of using the Web IDE feature</p>
 
     <ol>
-      <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <img class="image" src="../media/gitlab/guide/webide-1.png"/>
-      <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/webide-2.png"/>
-      <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/gitlab/guide/webide-3.png"/>
-      <img class="image" src="../media/gitlab/guide/webide-4.png"/>
+      <li>Click on the "Web IDE" button<br>
+        <img alt="Use GitLab Web IDE #1" class="image" src="../media/gitlab/guide/webide-1.png"/>
+      </li>
+      <li>Select the files you need to modify and edit them from the browser directly</li>
+      <li>When you are done, click on the "Commit" button to enter the "Review" stage<br>
+        <img alt="GitLab Web IDE Workspace" class="image" src="../media/gitlab/guide/webide-2.png"/>
+      </li>
+      <li>In this stage, review all of your changes per file to ensure that they are correct and stage/discard them accordingly<br>
+        <i>Alternatively, you can use the "Stage All" button to stage all unstaged files</i>
+      </li>
+      <li>When you are done reviewing, click the "Commit" button again<br>
+        <img alt="GitLab Web IDE Review Page" class="image" src="../media/gitlab/guide/webide-3.png"/>
+      </li>
+      <li>Enter the commit message for these changes you have done</li>
+      <li>Afterwards select the "Create a new branch" option and enter your branch name for this change, checking the "Start a new merge request" button so that GitLab 
+        <i class="fab fa-gitlab"></i> will automatically move you to the "Create MR page"<br>
+        <b>NOTE: Do not use the "Commit to MASTER branch" option as it will be protected from modification and your commits WILL fail</b>
+      </li>
+      <li>Click the Green "Commit" button for the final time and commit your changes into your branch with the Merge Request!<br>
+        <i>For more information on creating a MR head over to <a href="mr.html">Creating a feature and Merge Request</a> for more information</i>
+        <img alt="GitLab Web IDE Commit Page" class="image" src="../media/gitlab/guide/webide-4.png"/>
+      </li>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls src="../media/gitlab/GitLab Web IDE.mp4" type="video/mp4">Your browser does not support video files</video>
 
     <button type="button" onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
     <script src="../scripts/common.js" type="text/javascript"></script>
