--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <ul>
       <li>VCS Provider Introduction<ul>
           <li><a href="/guides/github.html"><i class="fab fa-github"></i> GitHub</a></li>
-          <li><a href="/guides/gitlab.html"><i class="fab fa-gitlab"></i> GitLab (Coming Soon)</a></li>
+          <li><a href="/guides/gitlab.html"><i class="fab fa-gitlab"></i> GitLab</a></li>
       </ul></li>
       <li><a href="/guides/sourcetree.html"><i class="fab fa-sourcetree"></i> Introduction to SourceTree</a></li>
       <li>Clone Repository<ul>
         <li><a href="/guides/clone.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub</a></li>
-        <li><a href="/guides/clone-gitlab.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab (Coming Soon)</a></li>
+        <li><a href="/guides/clone-gitlab.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab</a></li>
       </ul></li>
       <li>How to import cloned <i class="fab fa-git"></i> Repo into IDE<ul>
           <li><a href="/guides/import-intellij.html">IntelliJ IDEA</a></li>
@@ -35,17 +35,17 @@
       <li><a href="/guides/push.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> How to push to origin</a></li>
       <li><b>Important</b> How to create a feature (PR/MR)<ul>
         <li><a href="/guides/pr.html"><i class="fab fa-github"></i>/<i class="fab fa-sourcetree"></i> GitHub Pull Requests</a></li>
-        <li><a href="/guides/mr.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab Merge Requests (Coming Soon)</a></li>
+        <li><a href="/guides/mr.html"><i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> GitLab Merge Requests</a></li>
       </ul></li>
       <li><a href="/guides/conflict.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> Resolve Code Conflicts</a></li>
-      <li><a href="/guides/conflict-web.html"><i class="fab fa-gitlab"></i> Resolve Code Conflicts online during a MR (Coming Soon)</a></li>
+      <li><a href="/guides/conflict-web.html"><i class="fab fa-gitlab"></i> Resolve Code Conflicts online during a MR</a></li>
       <li><a href="/guides/rebase.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> Rebase Branch against another branch</a></li>
       <li><a href="/guides/amend.html"><i class="fab fa-github"></i>/<i class="fab fa-gitlab"></i>/<i class="fab fa-sourcetree"></i> <i>Optional</i> Amend unpushed commits</a></li>
       <li><i>Optional</i> View CI Builds<ul>
         <li><a href="/guides/buildserver.html"><i class="fab fa-github"></i> GitHub (Travis CI)</a></li>
-        <li><a href="/guides/pipeline.html"><i class="fab fa-gitlab"></i> GitLab (GitLab CI) (Coming Soon)</a></li>
+        <li><a href="/guides/pipeline.html"><i class="fab fa-gitlab"></i> GitLab (GitLab CI)</a></li>
       </ul></li>
-      <li><a href="/guides/webide.html"><i class="fab fa-gitlab"></i> <i>Optional</i> Modify code with GitLab's Web IDE (Coming Soon)</a></li>
+      <li><a href="/guides/webide.html"><i class="fab fa-gitlab"></i> <i>Optional</i> Modify code with GitLab's Web IDE</a></li>
     </ul>
 
     <h2>What's required for this</h2>
@@ -77,9 +77,9 @@
       the master branch will always be compilable and bad code does not land there. This is why branch protection exists as well to prevent direct pushes 
       <div class="imgrow">
         <div class="imgcol"><b>Sample Branch Protection Rule Configuration</b><br>
-          <img class="image" src="media/branch-protect-1.jpg" /></div>
+          <img alt="GitHub Branch Protection Img #1" class="image" src="media/branch-protect-1.jpg" /></div>
         <div class="imgcol"><b>Branch Protection in place</b><br>
-          <img class="image" src="media/branch-protect-2.jpg" /></div>
+          <img alt="GitHub Branch Protection Img #2" class="image" src="media/branch-protect-2.jpg" /></div>
       </div>
 
     </p>
@@ -91,12 +91,8 @@
   
     <h1>Internal TODO for this site</h1>
     <ul>
-      <li>Finish Intro to GitLab</li>
-      <li>GitLab Clone</li>
-      <li>GitLab Merge Requests (MR)</li>
-      <li>GitLab Conflict Resolution in MR (Web)</li>
-      <li>GitLab CI View Builds</li>
-      <li>Update all guides to reflect if its <i class="fab fa-github"></i> or <i class="fab fa-gitlab"></i> compatible</li>
+      <li>Fixed Linting issues from webhint</li>
+      <li>Check that all GitLab Guides have no issues</li>
     </ul>
 
     <h1>Projects</h1>
