Fixed some bugs
- Invalid Picture placement in Web IDE Guide
- Travis CI being labelled as a GitLab feature

--- a/guides/webide.html
+++ b/guides/webide.html
@@ -47,7 +47,7 @@
         <b>NOTE: Do not use the "Commit to MASTER branch" option as it will be protected from modification and your commits WILL fail</b>
       </li>
       <li>Click the Green "Commit" button for the final time and commit your changes into your branch with the Merge Request!<br>
-        <i>For more information on creating a MR head over to <a href="mr.html">Creating a feature and Merge Request</a> for more information</i>
+        <i>For more information on creating a MR head over to <a href="mr.html">Creating a feature and Merge Request</a> for more information</i><br>
         <img alt="GitLab Web IDE Commit Page" class="image" src="../media/gitlab/guide/webide-4.png"/>
       </li>
     </ol>
