Test usage of WebP in index

--- a/index.html
+++ b/index.html
@@ -77,9 +77,16 @@
       the master branch will always be compilable and bad code does not land there. This is why branch protection exists as well to prevent direct pushes 
       <div class="imgrow">
         <div class="imgcol"><b>Sample Branch Protection Rule Configuration</b><br>
-          <img alt="GitHub Branch Protection Img #1" class="image" src="media/branch-protect-1.jpg" /></div>
+          <picture class="image">
+            <source type="image/webp" srcset="media/branch-protect-1.webp" />
+            <img alt="GitHub Branch Protection Img #1" src="media/branch-protect-1.jpg" />
+          </picture></div>
         <div class="imgcol"><b>Branch Protection in place</b><br>
-          <img alt="GitHub Branch Protection Img #2" class="image" src="media/branch-protect-2.jpg" /></div>
+          <picture class="image">
+            <source type="image/webp" srcset="media/branch-protect-2.webp" />
+            <img alt="GitHub Branch Protection Img #2" src="media/branch-protect-2.jpg" />
+          </picture>
+          </div>
       </div>
 
     </p>
